Web Animations: give ComputedEffectTiming::endTime a lower bound of 0

The spec defined the calculation clearly, but we had missed the
lower bound:

https://drafts.csswg.org/web-animations-1/#end-time

Bug: 827623
Change-Id: If7ae487d0be09753b2357f1379a2f225a7861bae
Reviewed-on: https://chromium-review.googlesource.com/989428
Reviewed-by: Xida Chen <xidachen@chromium.org>
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547685}
Former-commit-id: 55aa8afeb7c99f5aabbe1e44fffcf70f9babd094