third_party/WebKit/Source/core/animation/AnimationEffect.cpp
@@ -85,6 +85,13 @@ double AnimationEffect::ActiveDurationInternal() const {
   return result;
 }
 
+double AnimationEffect::EndTimeInternal() const {
+  // Per the spec, the end time has a lower bound of 0.0:
+  // https://drafts.csswg.org/web-animations-1/#end-time
+  return std::max(
+      timing_.start_delay + ActiveDurationInternal() + timing_.end_delay, 0.0);
+}
+
 void AnimationEffect::UpdateSpecifiedTiming(const Timing& timing) {
   // FIXME: Test whether the timing is actually different?
   timing_ = timing;
